[gd_scene load_steps=13 format=3 uid="uid://bygv60003uc5w"]

[ext_resource type="PackedScene" uid="uid://bxbkpou8fdoqo" path="res://game/actors/enemies/enemy.tscn" id="1_kjv5t"]
[ext_resource type="Script" path="res://game/actors/enemies/ranged_enemy.gd" id="2_0rhu4"]
[ext_resource type="BehaviorTree" uid="uid://r3tx27cwxvor" path="res://ai/ranged_enemy_behavior_tree.tres" id="2_cfso8"]
[ext_resource type="Script" path="res://game/actors/abilities/ranged_ability.gd" id="3_br6ng"]
[ext_resource type="Script" path="res://common/components/templates/HitBoxComponent3D.gd" id="4_rnikt"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_syuwp"]

[sub_resource type="BoxMesh" id="BoxMesh_uaspe"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mtyox"]

[sub_resource type="BlackboardPlan" id="BlackboardPlan_shc20"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mh05o"]

[sub_resource type="Curve3D" id="Curve3D_x2m00"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0.551956, -1.28522, -2.22809, 0, 0, 0, 0, 0, 0, -1.4621, -2.54723, -25.5444),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_njpa4"]
albedo_color = Color(0, 0, 1, 1)
emission_enabled = true
emission = Color(0, 0, 1, 1)

[node name="RangedEnemy" instance=ExtResource("1_kjv5t")]
collision_layer = 8
collision_mask = 15
script = ExtResource("2_0rhu4")
telegraph_duration = 0.0
telegraph_starting_radius = 0.0
telegraph_to_beam_delay = 0.0
beam_duration = 0.0
beam_radius = 0.0
is_active = true
speed = 5
turning_speed = 100.0

[node name="Visual" type="Node3D" parent="." index="0"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visual" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_syuwp")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Visual" index="1"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1.4821, -0.378365)
mesh = SubResource("BoxMesh_uaspe")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_mtyox")

[node name="BTPlayer" type="BTPlayer" parent="." index="2"]
behavior_tree = ExtResource("2_cfso8")
blackboard_plan = SubResource("BlackboardPlan_shc20")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="3"]
unique_name_in_owner = true
target_desired_distance = 2.0
path_max_distance = 1.01
debug_enabled = true

[node name="HurtBoxComponent3D" parent="." index="5"]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBoxComponent3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.958669, 0)
shape = SubResource("CapsuleShape3D_mh05o")

[node name="RangedAbility" type="Node3D" parent="." index="6"]
script = ExtResource("3_br6ng")
hitting_color = Color(0, 0, 1, 1)

[node name="BeamRay" type="RayCast3D" parent="RangedAbility" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.806714, -0.607803)
target_position = Vector3(0, 0, -5)
collision_mask = 258
collide_with_areas = true
debug_shape_thickness = 5

[node name="BeamStart" type="Marker3D" parent="RangedAbility" index="1"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Path3D" type="Path3D" parent="RangedAbility" index="2"]
curve = SubResource("Curve3D_x2m00")

[node name="TelegraphShape" type="CSGCylinder3D" parent="RangedAbility" index="3"]
unique_name_in_owner = true
transform = Transform3D(1.91069e-15, 4.37114e-08, -1, 1, -4.37114e-08, 0, -4.37114e-08, -1, -4.37114e-08, 0, 1.07001, -0.937405)
material = SubResource("StandardMaterial3D_njpa4")

[node name="HitBoxComponent3D" type="Area3D" parent="RangedAbility" index="4"]
script = ExtResource("4_rnikt")
active = true

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.78052, 1.45874, -8.95744)
size = Vector3(15.2944, 4.91748, 2)
